Added a gaussian filter to terrain

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -51,6 +51,8 @@ artifacts, notably for steeper surfaces.
 
         \subsection{Perlin Noise}
 
+        \subsection{Gaussian Filter}
+
         \subsection{GoE Algorithm}
 
     \section{Trees}
