--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -19,6 +19,10 @@ environments. The passive interaction of the user is vital to this simulation, a
 one would observe a natural environment; ideally, the simulation would evoke similar reactions to
 the environment GoE seeks to emulate, thus exploring the concept of a “natural”, the distinction
 between real and virtual, and one's own sense of place.
+ 
+    % Intro: what is the need? motivation, difficulty, etc.
+    % Abs: ad for the paper, shorter,  mirrors introduction, fewer results and motivation
+    % Refocus on engineering
 
     \section{Prior Art}
 
@@ -44,6 +48,12 @@ Loop while quadrilateral side is at least 1
     Half quadrilateral side
 
     \end{verbatim}
+
+    % Discuss testing
+    % Look at paper, look at actual terrain for constants
+    % Discuss size scale
+    % GIS data?
+
     \tab The algorithm is works well to generate fractal surfaces, and allows for a decent amount
 of control over the percieved "roughness" of the resultant surface in how one defines the scale
 factor. However, it is fairly slow, executing in $O((n-1)^2)$ time. There are also well-documented
@@ -157,6 +167,9 @@ modeled, and the effect that they have on tree growth.
 \end{enumerate}
 
             \subsubsection{Bijunctions} % Consider mentioning bronchial systems?
+                % Discuss benefits of trijuction
+                % 
+
             \subsubsection{Tropism}
             \subsubsection{Growth Density}
             \subsubsection{Elevation and Gradation}
@@ -321,7 +334,7 @@ for a large amount of variation on this tree structure.
 
     \end{itemize}
 
-    \section{Runtime}
+    \section{Runtime} % Why I want it fast, how fast is it
         \subsection{LList Algorithm}
             \subsubsection{Profile}
             \subsubsection{Asymptotic Behavior}
